--- a/index.html
+++ b/index.html
@@ -6,20 +6,16 @@
         <title>Название сайта</title>
     </head>
     <body>
-        <h1 class="title">Заголовок 1</h1>
-        <p>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. <b>Lorem Ipsum</b> используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.."<br> Многие программы электронной вёрстки и редакторы <a href="https://htmlbase.ru/">HTML</a> используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).</p>
-        <img src="/Users/Galina/Desktop/122333.jpeg" height="200" alt="no img">
-        <h2 class="title">Заголовок 2: про булит поинты</h2>
-        <ul>
-            <li>Первый булит поинт</li>
-            <li>Второй булит поинт</li>
-            <li>Третий булит поинт</li>
-        </ul>
-        <h3 class="title">Заголовок 3: про варианты выбора</h3>
-        <ol>
-            <li>Первый вариант выбора</li>
-            <li>Второй вариант выбора</li>
-            <li>Третий вариант выбора</li>
-        </ol>
+        
+        <div class="card">        
+            <img class="photo" src="/Users/Galina/Desktop/122333.jpeg" alt="no img">
+            <h1 class="card-title">PRODUCT</h1>
+            <ul class="list">
+                <li>July 24, 2022</li>
+            </ul> 
+            <h2 class="card-subtitle">Interview - What it's like to work remotely in big-sized product development?</h2>
+            <p1 class="card-subtitle">People say that developing products isn't easy. Neither it is to build long-distance relationships. But, how about doing both, simultaneously?</p1>
+        </div>
+        
     </body>
 </html>
