--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li>July 24, 2022</li>
             </ul> 
             <h2 class="card-subtitle">Interview — What it's like to work remotely in big-sized product development?</h2>
-            <p1 class="card-subtitle">People say that developing products isn't easy. Neither it is to build long-distance relationships. But, how about doing both, simultaneously?</p1>
+            <p1 class="card-subtitles">People say that developing products isn't easy. Neither it is to build long-distance relationships. But, how about doing both, simultaneously?</p1>
         </div>
     </body>
 </html>
