--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="personal">
                 <h3 class="">Egor Kochegarov</h3>
-                <p2 class="">Junior</p2>
+                <p2 class="texts">Junior</p2>
             </div>
         </div>
     </body>
