--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
         <div class="card">
             <div class="img">                
-                <img class="photo" src="/Users/Galina/Desktop/777.jpeg" alt="no img">
+                <img class="photo" src="file:///G:/projects/Myweb/img/1.jpeg" alt="no img">
             </div>
             <div class="text">
                 <h1 class="card-title">PRODUCT</h1>
@@ -21,7 +21,7 @@
             </div>
             
             <div class="cards">
-                <img class="myphoto" src="/Users/Galina/Desktop/888.jpeg" alt="No IMG">
+                <img class="myphoto" src="file:///G:/projects/Myweb/img/index.jpg" alt="No IMG">
             </div>
             <div class="personal">
                 <h3 class="">Egor Kochegarov</h3>
